fix z-index issue

--- a/src/css/layer.styl
+++ b/src/css/layer.styl
@@ -8,7 +8,7 @@
     background #fff
     font-weight bold
     text-align center
-    z-index 15
+    z-index 12
 
     .layer_content
         padding-top 50px
