--- a/src/css/layout.styl
+++ b/src/css/layout.styl
@@ -1,7 +1,7 @@
 $line-common =
     position absolute
     background #ccc
-    z-index 12
+    z-index 13
 
 .left_line
     {$line-common}
